# devops_test

DevOps/1/: Cron.txt  disk_space.sh
DevOps/2/: CMakeLists.txt
DevOps/3/: nginx.conf
DevOps/4/: build_nginx_sqlite.sh
DevOps/5/: Dockerfile  docker-compose.yml
DevOps/6/: Dockerfile
